changed input parsing method to make it faster, added tests, some changes i dont remember xpp